artist page fix & migrate to online db :3

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="sqlserver://GangWeed:1433;DatabaseName=Fart;encrypt=true;trustServerCertificate=true;integratedSecurity=true"
+DATABASE_URL="postgres://default:RW5lA0rJTqUw@ep-twilight-bonus-a11fdlz8.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
