--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgres://default:RW5lA0rJTqUw@ep-twilight-bonus-a11fdlz8.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
+
+NEXTAUTH_SECRET=say_lalisa_love_me_lalisa_love_me_hey
