--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.8",
     "typescript": "^5"
   }
 }
